- Initial commit Boilerplate with CastleCSS forms

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="dist/css/styles.min.css" />
+	
+	<!-- JS -->
+	<script type="text/javascript" src="dist/js/scripts.min.js"></script>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/favicon.png">
@@ -144,6 +147,52 @@
 								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn-theme05 btn-full mb"><i class="fa fa-list"></i> List</a></div>
 							</div>
 						</div>
+
+						<!--- Forms! -->
+						<div class="mb-3x">
+							<h2 class="head2">Forms</h2> 
+							<h3 class="head3">Radiobuttons</h3>
+
+							<div class="g mb-3x">
+								<form class="form">	
+									<div class="form-fields">
+										<div class="form-field" data-castlecss-field>
+											<label for="gender" class="label">Gender</label>
+											<label class="input-control input-radio">
+												Male
+												<input type="radio" name="radio1" />
+												<span class="input-indicator">
+											</label>
+											<label class="input-control input-radio">
+												Female
+												<input type="radio" name="radio1" />
+												<span class="input-indicator">
+											</label>
+										</div>
+									</div>
+								</form>
+							</div>
+							<h3 class="head3">Input</h3>
+							<form class="form">	
+									<div class="form-fields">
+										<div class="form-field" data-castlecss-field="">
+											<label for="email">Email</label>
+											<input type="email" name="Email" id="email" value="">
+										</div>
+									</div>
+								</form>
+							<h3 class="head3">Select</h3>
+							<div class="g mb-3x">
+								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn btn-full mb"><i class="fa fa-angle-right"></i> Read more</a></div>
+								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn-theme01 btn-full mb"><i class="fa fa-edit"></i> Edit</a></div>
+								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn-theme02 btn-full mb"><i class="fa fa-cloud"></i> Cloud</a></div>
+								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn-theme03 btn-full mb"><i class="fa fa-globe"></i> Globe</a></div>
+								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn-theme04 btn-full mb"><i class="fa fa-spinner fa-spin"></i> Spin</a></div>
+								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn-theme05 btn-full mb"><i class="fa fa-list"></i> List</a></div>
+							</div>
+
+						</div>
+
 						</div>
 					</div>
 				</div>
