--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<!-- Basic Page Needs -->
 	<meta charset="utf-8">
@@ -15,27 +16,28 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="dist/css/styles.min.css" />
-	
+
 	<!-- JS -->
 	<script type="text/javascript" src="dist/js/scripts.min.js"></script>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/favicon.png">
 </head>
+
 <body>
 	<nav class="navbar navbar-inverted">
 		<div class="container">
 			<div class="logo">
-				<img src="img/logo.svg" alt="Company Name Logo"/>
+				<img src="img/logo.svg" alt="Company Name Logo" />
 			</div>
 			<ul class="nav">
-	            <li><a href="#">Home</a></li>
+				<li><a href="#">Home</a></li>
 				<li><a href="#products">Products</a></li>
 				<li><a href="#about">About</a></li>
-	            <li><a href="#contact">Contact</a></li>
-	            <li><a href="clean.html" target="blank">Clean page</a></li>
-	            <li><a href="http://www.castlecss.com" target="blank">Documentation</a></li>
-	      	</ul>
+				<li><a href="#contact">Contact</a></li>
+				<li><a href="clean.html" target="blank">Clean page</a></li>
+				<li><a href="http://www.castlecss.com" target="blank">Documentation</a></li>
+			</ul>
 		</div>
 	</nav>
 
@@ -44,7 +46,10 @@
 		<div class="container">
 			<div class="p p-b3-0">
 				<h1>Hello, world!</h1>
-				<p>Nulla viverra, neque a blandit fermentum, magna sem dictum lacus, fringilla dignissim orci risus nec leo. Sed imperdiet lacinia efficitur. Vivamus varius finibus leo, ut pharetra lectus elementum id. In hac habitasse platea dictumst. Proin augue lorem, sollicitudin et leo et, pretium ultricies orci. Aenean ante est, rhoncus a dapibus et, luctus id purus. Sed ornare metus a nisl volutpat faucibus. Vivamus venenatis fermentum magna, at hendrerit tellus sagittis ut. </p>
+				<p>Nulla viverra, neque a blandit fermentum, magna sem dictum lacus, fringilla dignissim orci risus nec leo. Sed imperdiet
+					lacinia efficitur. Vivamus varius finibus leo, ut pharetra lectus elementum id. In hac habitasse platea dictumst. Proin
+					augue lorem, sollicitudin et leo et, pretium ultricies orci. Aenean ante est, rhoncus a dapibus et, luctus id purus.
+					Sed ornare metus a nisl volutpat faucibus. Vivamus venenatis fermentum magna, at hendrerit tellus sagittis ut. </p>
 				<a href="#" class="btn-theme02">Read more</a>
 			</div>
 		</div>
@@ -59,21 +64,24 @@
 				<div class="b0_12 b3_08">
 					<div class="pt pb">
 						<h2>Heading</h2>
-						<p><i class="fa fa-pied-piper"></i>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. </p>
+						<p><i class="fa fa-pied-piper"></i>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras
+							in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. </p>
 						<a href="#">Read more</a>
 					</div>
 				</div>
 				<div class="b0_12 b3_08">
 					<div class="pt pb">
 						<h2>Heading</h2>
-						<p><i class="fa fa-info-circle"></i>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. </p>
+						<p><i class="fa fa-info-circle"></i>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras
+							in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. </p>
 						<a href="#">Read more</a>
 					</div>
 				</div>
 				<div class="b0_12 b3_08">
 					<div class="pt pb">
 						<h2>Heading</h2>
-						<p><i class="fa fa-binoculars"></i>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. </p>
+						<p><i class="fa fa-binoculars"></i>&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras
+							in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. </p>
 						<a href="#">Read more</a>
 					</div>
 				</div>
@@ -102,7 +110,10 @@
 					<div class="p block">
 						<h1 class="mt-0">Basic layout</h1>
 
-						<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+						<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum
+							tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em>							Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum
+							sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum
+							rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
 						<div class="alert mb">
 							<i class="fa fa-info-circle"></i>&nbsp;Friendly alert
 						</div>
@@ -112,7 +123,9 @@
 							<li>Aliquam tincidunt mauris eu risus.</li>
 						</ol>
 						<blockquote>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est
+								eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus,
+								at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p>
 						</blockquote>
 						<div class="alert-warning mb">
 							<i class="fa fa-warning"></i>&nbsp;This is a warning with a <a href="#">link</a>!
@@ -137,7 +150,7 @@
 						</div>
 
 						<div class="mb-3x">
-							<h2 class="head2">Example buttons with icons</h2> 
+							<h2 class="head2">Example buttons with icons</h2>
 							<div class="g mb-3x">
 								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn btn-full mb"><i class="fa fa-angle-right"></i> Read more</a></div>
 								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn-theme01 btn-full mb"><i class="fa fa-edit"></i> Edit</a></div>
@@ -147,40 +160,40 @@
 								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn-theme05 btn-full mb"><i class="fa fa-list"></i> List</a></div>
 							</div>
 						</div>
-
+					</div>
+					<div>
 						<!--- Forms! -->
 						<div class="mb-3x">
-							<h2 class="head2">Forms</h2> 
+							<h2 class="head2">Forms</h2>
 							<h3 class="head3">Radiobuttons</h3>
 
 							<div class="g mb-3x">
-								<form class="form">	
+								<form class="form">
 									<div class="form-fields">
 										<div class="form-field" data-castlecss-field>
-											<label for="gender" class="label">Gender</label>
 											<label class="input-control input-radio">
 												Male
-												<input type="radio" name="radio1" />
-												<span class="input-indicator">
-											</label>
+																			<input type="radio" name="radio1" />
+																			<span class="input-indicator">
+																		</label>
 											<label class="input-control input-radio">
-												Female
-												<input type="radio" name="radio1" />
-												<span class="input-indicator">
-											</label>
+																			Female
+																			<input type="radio" name="radio1" />
+																			<span class="input-indicator">
+																		</label>
 										</div>
 									</div>
 								</form>
 							</div>
 							<h3 class="head3">Input</h3>
-							<form class="form">	
-									<div class="form-fields">
-										<div class="form-field" data-castlecss-field="">
-											<label for="email">Email</label>
-											<input type="email" name="Email" id="email" value="">
-										</div>
+							<form class="form">
+								<div class="form-fields label-top">
+									<div class="form-field" data-castlecss-field>
+										<label for="email">Email</label>
+										<input type="email" name="Email" id="email">
 									</div>
-								</form>
+								</div>
+							</form>
 							<h3 class="head3">Select</h3>
 							<div class="g mb-3x">
 								<div class="b0_12 b2_06 b6_04"><a href="#" class="btn btn-full mb"><i class="fa fa-angle-right"></i> Read more</a></div>
@@ -192,11 +205,10 @@
 							</div>
 
 						</div>
-
-						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 
 		<!-- Products -->
@@ -302,6 +314,7 @@
 			</div>
 		</div>
 	</footer>
-</div>
+	</div>
 </body>
+
 </html>
